Preventing messages from covering screen

--- a/frontend/styles/Messages.module.scss
+++ b/frontend/styles/Messages.module.scss
@@ -33,6 +33,7 @@
     align-self: flex-start;
     position: relative;
     padding-left: 40px;
+    max-width: 80%;
     
     .message-main {
         display: flex;
